@@ -1,6 +1,9 @@
+.. -*- coding: utf-8 -*-
+
 =======================================
  reStructuredText Markup Specification
 =======================================
+
 :Author: David Goodger
 :Contact: goodger@python.org
 :Revision: $Revision$
@@ -78,7 +81,7 @@ Here are examples of `body elements`_:
 
          - This is a bullet list.
 
-         - Bullets can be "-", "*", or "+".
+         - Bullets can be "*", "+", or "-".
 
   2. `Enumerated lists`_::
 
@@ -609,10 +612,10 @@ Bullet Lists
 
 Doctree elements: bullet_list, list_item.
 
-A text block which begins with a "-", "*", or "+", followed by
-whitespace, is a bullet list item (a.k.a. "unordered" list item).
-List item bodies must be left-aligned and indented relative to the
-bullet; the text immediately after the bullet determines the
+A text block which begins with a "*", "+", "-", "•", "‣", or "⁃",
+followed by whitespace, is a bullet list item (a.k.a. "unordered" list
+item).  List item bodies must be left-aligned and indented relative to
+the bullet; the text immediately after the bullet determines the
 indentation.  For example::
 
     - This is the first bullet list item.  The blank line above the
